overflow fixed

--- a/src/styles/utils/normalize.scss
+++ b/src/styles/utils/normalize.scss
@@ -17,6 +17,8 @@ body {
 }
 
 .wrapper {
+  overflow: hidden;
+
   min-height: 100%;
 
   display: flex;
